--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity$MainActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity$MainActivity">
 
     <TextView
-            android:id="@+id/headerText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Flashlight App"
-            android:textSize="24sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" />
+        android:id="@+id/headerText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Flashlight App"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <Switch
-            android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Back Flash"
-            app:layout_constraintTop_toBottomOf="@+id/headerText"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="16dp" />
+        android:id="@+id/back"
+        android:layout_width="149dp"
+        android:layout_height="57dp"
+        android:text="Back Flash"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.549"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
 
     <Switch
-            android:id="@+id/front"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Front Flash"
-            app:layout_constraintTop_toBottomOf="@+id/backFlashlightButton"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="16dp" />
+        android:id="@+id/front"
+        android:layout_width="149dp"
+        android:layout_height="57dp"
+        android:text="Front Flash"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.549"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="502dp"
+        app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
     <Switch
-            android:id="@+id/both"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Both Flash"
-            app:layout_constraintTop_toBottomOf="@+id/frontFlashlightButton"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="16dp" />
-
-
+        android:id="@+id/both"
+        android:layout_width="149dp"
+        android:layout_height="57dp"
+        android:text="Both Flash"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.549"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider3" />
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/materialToolbar2"
@@ -56,10 +58,10 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="1dp" />
+        tools:layout_editor_absoluteY="3dp" />
 
     <View
         android:id="@+id/divider"
@@ -110,36 +112,19 @@
         app:layout_constraintVertical_bias="0.5"
         tools:ignore="MissingConstraints" />
 
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="103dp"
         android:layout_height="129dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.117"
         app:srcCompat="@android:drawable/radiobutton_off_background"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="67dp" />
-
-
-    <EditText
-        android:id="@+id/editTextText"
-        android:layout_width="221dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="95dp"
-        android:layout_marginEnd="47dp"
-        android:ems="16"
-        android:inputType="text"
-        android:shadowColor="#640E0E"
-        android:text="FLASHTORCH APP"
-        android:textAlignment="center"
-        android:textColor="#1D1A1A"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="Autofill,HardcodedText,LabelFor,MissingConstraints"
-        tools:layout_editor_absoluteY="2dp" />
+        tools:ignore="MissingConstraints" />
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/materialToolbar3"
@@ -154,19 +139,28 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextText2"
-        android:layout_width="413dp"
-        android:layout_height="70dp"
-        android:ems="10"
-        android:inputType="text"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="309dp"
+        android:layout_height="44dp"
         android:text=" Copyrights @Isaac Datch"
         android:textAlignment="center"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="Autofill,HardcodedText,LabelFor,MissingConstraints"
-        tools:layout_editor_absoluteY="668dp" />
+        android:textColor="#262525"
+        android:textStyle="bold|italic"
+        tools:layout_editor_absoluteX="57dp"
+        tools:layout_editor_absoluteY="674dp"
+        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar3"/>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="201dp"
+        android:layout_height="45dp"
+        android:text="FLASHTORCH"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="210dp"
+        tools:layout_editor_absoluteY="3dp"
+        app:layout_constraintEnd_toEndOf="@id/materialToolbar2"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
